--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -5,6 +5,10 @@
     --main-color: #373737;
     --background-color: #191919;
     --secondary-color: #1f1f1f;
+    --gray: #c5c5c5;
+    --resume-icons: #ffffff;
+    --back-profile: radial-gradient(142.91% 87.28% at 75.86% 16.64%, rgb(38, 38, 38) 0%, rgb(31, 31, 31) 100%);
+    --back-footer: linear-gradient(360deg, #1f1f1f 0%, #222 100%);
 }
 
 
