--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -9,6 +9,7 @@
     --resume-icons: #ffffff;
     --back-profile: radial-gradient(142.91% 87.28% at 75.86% 16.64%, rgb(38, 38, 38) 0%, rgb(31, 31, 31) 100%);
     --back-footer: linear-gradient(360deg, #1f1f1f 0%, #222 100%);
+    --back-pic: #f4f4f4;
 }
 
 
